fix: bug with image overflow

--- a/assets/css/components/_cards.scss
+++ b/assets/css/components/_cards.scss
@@ -223,3 +223,7 @@
 .logs-area {
   grid-area: logs;
 }
+
+.img-container {
+  overflow: hidden;
+}
